Handle error by stopping input channel (and generating alert for user); b=23821,r=warren@netscape.com